# FidelityFX-FSR2-injector

./: .gitignore  CMakeLists.txt  README.md
docs/: injector-roadmap.md
tools/reshade_bridge/: CMakeLists.txt  README.md  fsr2_reshade_bridge.cpp
tools/reshade_bridge/shaders/: Fsr1SpatialUpscale.fx
